some improvements to intro page

--- a/docs/wallet/atelier-intro.mdx
+++ b/docs/wallet/atelier-intro.mdx
@@ -11,32 +11,33 @@ Candide is the most complete smart account toolset with support for both ERC-433
 
 ## UX Benefits
 
-- **Auth Abstraction**: 
+- **Authentication made easy** 
   - [Passkeys Login](/wallet/plugins/passkeys/)
   - [Email/Social Login](/wallet/guides/authentication/#social--email)
   - [Multisig](/wallet/guides/multisig/)
-- **Gas Abstraction**: 
+- **Gas Abstraction**
   - [Sponsor gas](/wallet/guides/send-gasless-tx/) with rules and policies
   - Offer [gas payments in erc-20](/wallet/guides/pay-gas-in-erc20/) tokens
-- **Transaction Abstraction**
-  - [Automate transactions](/wallet/plugins/allowance) with Spending Limits. Offer subscriptions, reccuring or scheduled payments.
+- **Programmable Transactions**
+  - Use [Spending Limits](/wallet/plugins/allowance) to offer subscriptions and reccuring/scheduled payments.
   - [Batch multiple transactions](/wallet/guides/getting-started/#step-4-create-useroperation) into one.
-- **Security**
+- **Familiar Security**
   - Account Recovery with [trusted contracts](/wallet/plugins/recovery-with-guardians) or with traditional [email/sms](/wallet/recovery/auth-api/) 
 
 And that's only the tip of the iceberg. Because each account is a smart contract, contracts are programmable and enable arbitrarily advanced transaction functionalities. Unlike EOAs, which are limited by design.
 
 ## Products
 
-- **AbstractionKit SDK**: A Typescript library to build and send UserOperations, with first class support for *Safe* Accounts and *Simple Account*.
-- **Bundler API**: Nodes extension on all EVM compatible chains to send smart wallet type transactions
-- **Paymaster API**: Off-chain verification API facilitating gas sponsorship for gasless and gas payments in erc-20 token
-- **InstaGas**: A no-code platform that enables Apps to sponsor gas fees for their end-users using rules and policies
+- **AbstractionKit SDK**: A Typescript library to build and send UserOperations, with first class support for *Safe* Accounts and *Simple* Accounts.
+- **InstaGas**: A no-code platform that enables Dapps to sponsor gas fees for their end-users using rules and policies
+- **API**
+  - **Bundler**: Nodes extension on all EVM compatible chains to send smart wallet type transactions
+  - **Paymaster**: Off-chain verification API facilitating gas sponsorship for gasless and gas payments in erc-20 token
 
 
 ## Chains supported
 
-Candide is available on all major EVM equivalent networks. If you would like to see a network supported, [reach out to us](https://t.me/heymarcopolo).
+Candide is available on all major EVM equivalent networks. If you would like to see a network supported, reach out to us.
 
 import {NetworkList} from "/src/components/NetworkList";
 
@@ -46,9 +47,10 @@ import {NetworkList} from "/src/components/NetworkList";
 
 You can reach out to us at any time for questions, issues, concerns, product ideas, or random thoughts. Here are some ways to do so:
 
-- Join our Discord community [here](https://discord.gg/7R4g9XcxDQ)
-- Send us a tweet or DM us [@candidelabs](https://twitter.com/candidelabs)
+- Join our [Discord](https://discord.gg/7R4g9XcxDQ)
+- Tweet us on [@candidelabs](https://twitter.com/candidelabs)
 - Email us at team@candidelabs.com
+- Reach us on telegram [@heymarcopolo](https://t.me/heymarcopolo)
 
 We have night owls and early birds on our team, so you can expect to hear back from us at any time, regardless of where you are in the world.
 
