add multisig in familiar security

--- a/docs/wallet/atelier-intro.mdx
+++ b/docs/wallet/atelier-intro.mdx
@@ -14,7 +14,6 @@ Candide is the most complete smart account toolset with support for both ERC-433
 - **Authentication made easy** 
   - [Passkeys Login](/wallet/plugins/passkeys/)
   - [Email/Social Login](/wallet/guides/authentication/#social--email)
-  - [Multisig](/wallet/guides/multisig/)
 - **Gas Abstraction**
   - [Sponsor gas](/wallet/guides/send-gasless-tx/) with rules and policies
   - Offer [gas payments in erc-20](/wallet/guides/pay-gas-in-erc20/) tokens
@@ -22,7 +21,8 @@ Candide is the most complete smart account toolset with support for both ERC-433
   - Use [Spending Limits](/wallet/plugins/allowance) to offer subscriptions and reccuring/scheduled payments.
   - [Batch multiple transactions](/wallet/guides/getting-started/#step-4-create-useroperation) into one.
 - **Familiar Security**
-  - Account Recovery with [trusted contracts](/wallet/plugins/recovery-with-guardians) or with traditional [email/sms](/wallet/recovery/auth-api/) 
+  - Account Recovery with [trusted contracts](/wallet/plugins/recovery-with-guardians) or with traditional [email/sms](/wallet/recovery/auth-api/)
+  - Two Factor Auth using [Multisig](/wallet/guides/multisig/)
 
 And that's only the tip of the iceberg. Because each account is a smart contract, contracts are programmable and enable arbitrarily advanced transaction functionalities. Unlike EOAs, which are limited by design.
 
