add optional field in batch and sponsor example

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -181,6 +181,7 @@ const handleSendTx = () => {
       capabilities: {
           paymasterService: {
             [toHex(chainId)]: {
+                optional: true,
                 url: paymasterUrl,
             }
           }
