add jumper and cabana to list of supported apps

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -32,6 +32,8 @@ The following apps and wallets support smart capabilities.
 * [Lido](https://lido.fi)
 * [revoke.cash](https://revoke.cash/)
 * [Lifi](https://li.fi/)
+* [Jumper.Exchange](https://jumper.exchange/)
+* [PoolTogether](https://app.cabana.fi/)
 
 
 ### Wallets
