--- a/docs/wallet/abstractionkit/9-simple-7702-account.mdx
+++ b/docs/wallet/abstractionkit/9-simple-7702-account.mdx
@@ -29,12 +29,8 @@ The contracts have been developed by the Ethereum Foundation Account Abstraction
 ### Installation
 
 ```bash
-npm install abstractionkit@0.2.17
+npm install abstractionkit
 ```
-
-:::note
-```abstractionkit@0.2.17``` is the version release with EIP-7702 support before the official upgrade with Pectra.
-:::
 
 ### Usage
 
