--- a/docs/wallet/guides/0-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/0-getting-started-eip-7702.mdx
@@ -37,12 +37,8 @@ yarn init
 2. Install required dependencies
 
 ```bash
-npm install abstractionkit@0.2.17 dotenv ethers
+npm install abstractionkit dotenv ethers
 ```
-
-:::note
-```abstractionkit@0.2.17``` is the version release with EIP-7702 support before the official upgrade with Pectra.
-:::
 
 3. Configure Environment Variables
 
