add eip-7702 guides and improve dev env setup across guides

--- a/docs/wallet/guides/0-getting-started.mdx
+++ b/docs/wallet/guides/0-getting-started.mdx
@@ -25,15 +25,16 @@ Candide builds open-source software for ERC-4337 account abstraction standard. T
 1. Create a new directory for your project:
 
 ```bash
-mkdir safe-batch-mint
-cd safe-batch-mint
-yarn init
+mkdir candide-eip7702-upgrade-eoa
+cd candide-eip7702-upgrade-eoa
+npx tsc --init
 ```
 
 2. Install required dependencies
 
 ```bash
-yarn add abstractionkit dotenv
+npm i typescript --save-dev
+npm i abstractionkit dotenv 
 ```
 
 3. Configure Environment Variables
