--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -33,15 +33,16 @@ If you are coming from the [previous guide](../send-gasless-tx), you only need a
 1. Create a new directory for your project:
 
 ```bash
-mkdir smart-wallet-pay-gas-erc20
-cd smart-wallet-pay-gas-erc20
-yarn init
+mkdir candide-eip7702-upgrade-eoa
+cd candide-eip7702-upgrade-eoa
+npx tsc --init
 ```
 
 2. Install required dependencies
 
 ```bash
-yarn add abstractionkit dotenv
+npm i typescript --save-dev
+npm i abstractionkit dotenv
 ```
 
 3. Configure Environment Variables
