--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -28,15 +28,16 @@ If you are coming from the [getting-started](../getting-started) guide, you only
 1. Create a new directory for your project:
 
 ```bash
-mkdir safe-smart-multisig
-cd safe-smart-multisig
-yarn init
+mkdir candide-eip7702-upgrade-eoa
+cd candide-eip7702-upgrade-eoa
+npx tsc --init
 ```
 
 2. Install required dependencies
 
 ```bash
-yarn add abstractionkit dotenv
+npm i typescript --save-dev
+npm i abstractionkit dotenv
 ```
 
 3. Configure Environment Variables
