--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -31,15 +31,16 @@ If you need, you can fork and run this tutorial directly on [Github](https://git
 1. Create a new directory for your project:
 
 ```bash
-mkdir smart-wallet-send-gasless-tx
-cd smart-wallet-send-gasless-tx
-yarn init
+mkdir candide-eip7702-upgrade-eoa
+cd candide-eip7702-upgrade-eoa
+npx tsc --init
 ```
 
 2. Install required dependencies
 
 ```bash
-yarn add abstractionkit dotenv
+npm i typescript --save-dev
+npm i abstractionkit dotenv
 ```
 
 3. Configure Environment Variables
