add signing and verification example in passkeys

--- a/docs/wallet/plugins/0-passkeys.mdx
+++ b/docs/wallet/plugins/0-passkeys.mdx
@@ -398,6 +398,8 @@ const isSignatureValid: boolean =
     );
 ```
 
+For a complete example to sign and verify message, run the repo [safe-passkeys-sign-and-verify-message](https://github.com/Sednaoui/safe-passkeys-sign-and-verify-message)
+
 ## Additional Notes
 
 ### WebAuthn / Passkeys API
