reorginise the table of apps and wallets that support eip-5792

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -27,25 +27,33 @@ and the wallet will execute the bundle. [ERC-5792](https://eips.ethereum.org/EIP
 ## Who is live?
 The following apps and wallets support smart capabilities.
 
-### Apps
-
-* [Lido](https://lido.fi)
-* [revoke.cash](https://revoke.cash/)
-* [Lifi](https://li.fi/)
-* [Jumper.Exchange](https://jumper.exchange/)
-* [PoolTogether](https://app.cabana.fi/)
-
 
 ### Wallets
 
-* [Coinbase Smart Wallet](https://www.base.org/builders/smart-wallet)
-* [Ambire](https://www.ambire.com/)
-* [Safe\{Wallet\}](https://github.com/safe-global/safe-wallet-web)
-* MetaMask Extension [v12.15 on Sepolia](https://x.com/MetaMaskDev/status/1908226140361109759)
-* [Reown AppKit](https://reown.com/appkit)
-* [thirdweb InApp](https://portal.thirdweb.com/typescript/v5/inAppWallet)
-* [Openfort](https://openfort.xyz)
-* [Abstract Global](https://abs.xyz)
+|                          Wallet                                    | Batching | Sponsor Gas |
+|------------------------------------------------------------------- |----------|-------------|
+|[ Coinbase Smart Wallet](https://www.base.org/builders/smart-wallet)| ✅       | ✅          |
+| [Ambire](https://www.ambire.com/)                                  | ✅       | ✅          |
+| [Safe\{Wallet\}](https://github.com/safe-global/safe-wallet-web  ) | ✅       | ✅          |
+| [MetaMask Extension](metamask.io)                                  | ✅       | ✖️          |
+| [Reown AppKit](https://reown.com/appkit)                           | ✅       | ✅          |
+| [thirdweb InApp](https://thirdweb.com)                             | ✅       | ✅          |
+| [Openfort](https://openfort.xyz)                                   | ✅       | ✅          |
+| [Abstract Global](https://abs.xyz)                                 | ✅       | ✅          |
+
+### Apps
+
+|                      App                            | Batching | Sponsor Gas |
+|-----------------------------------------------------|----------|-------------|
+| [PoolTogether Cabana](https://app.cabana.fi/)       | ✅       | ✅          |
+| [revoke.cash](https://revoke.cash/)                 | ✅       | 🏗️          |
+| [Lido](https://lido.fi)                             | ✅       | ✖️          |
+| [Lifi](https://li.fi/)                              | ✅       | ✖️          |
+| [Jumper.Exchange](https://jumper.exchange/)         | ✅       | ✖️          |
+| [PoolTogether PoolTime](https://app.cabana.fi/)     | ✅       | ✖️          |
+| [Ekubo Exchange](https://ekubo.org/)                | ✅       | ✖️          |
+| [Uniswap Exchange](https://https://app.uniswap.org) | ✅       | ✖️          |
+
 
 ### Our Favourites ❤️
 
