fix metamask link

--- a/docs/instagas/6-batch-sponsor-transactions.mdx
+++ b/docs/instagas/6-batch-sponsor-transactions.mdx
@@ -35,7 +35,7 @@ The following apps and wallets support smart capabilities.
 |[ Coinbase Smart Wallet](https://www.base.org/builders/smart-wallet)| ✅       | ✅          |
 | [Ambire](https://www.ambire.com/)                                  | ✅       | ✅          |
 | [Safe\{Wallet\}](https://github.com/safe-global/safe-wallet-web  ) | ✅       | ✅          |
-| [MetaMask Extension](metamask.io)                                  | ✅       | ✖️          |
+| [MetaMask Extension](https://metamask.io)                          | ✅       | ✖️          |
 | [Reown AppKit](https://reown.com/appkit)                           | ✅       | ✅          |
 | [thirdweb InApp](https://thirdweb.com)                             | ✅       | ✅          |
 | [Openfort](https://openfort.xyz)                                   | ✅       | ✅          |
